tests/snapshots/integration_tests__snapshot_tests__array_two_counters_replace.snap
---
source: tests/snapshot_tests.rs
expression: run_benchmark(& path)
---
BenchmarkResult {
    example_name: "examples/array/array_two_counters_replace.vmt",
    status: Good,
    used_instantiations: [
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 5) i+0) 5)",
        "(= (Read_Int_Int (Write_Int_Int a1+0 j+0 3) j+0) 3)",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 5) 0) (Read_Int_Int a+0 0))",
        "(= (Read_Int_Int (Write_Int_Int a1+0 j+0 3) Z) (Read_Int_Int a1+0 Z))",
        "(= (Read_Int_Int (Write_Int_Int a+0 i+0 5) Z) (Read_Int_Int a+0 Z))",
    ],
}
